--- a/style.css
+++ b/style.css
@@ -127,8 +127,7 @@ body {
 .sign-buttons-container {
     display: flex;
     flex-direction: column;
-
-
+    margin-bottom: 20px;
 }
 
 .sign-button {
@@ -156,13 +155,12 @@ body {
 .signup-box {
     background-color: #FFFFFF;
     padding: 24px;
-    margin-top: 20px;
     box-shadow: 5px 5px 5px 5px #00000028;
     border-radius: 8px;
 }
 
 .information {
-    margin: 30px;
+    margin: 6px 0;
 }
 
 .listnowrap {
@@ -172,6 +170,7 @@ body {
 input {
     width: 100%;
     height: 30px;
+    margin: 2px 0;
 }
 
 p {
@@ -183,7 +182,6 @@ p {
 }
 
 .checkbox {
-    display: inline;
     margin-top: 10px;
     font-size: 12px;
 }
