--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ body {
     white-space: nowrap;
 }
 
-input {
+.input {
     width: 100%;
     height: 30px;
     margin: 2px 0;
@@ -233,6 +233,19 @@ p {
     margin-top: 10px;
     font-size: 12px;
 }
+
+.checkbox-container {
+    display: flex;
+    margin-top: 6px 0;
+    font-size: 12px;
+  }
+  .checkbox-input {
+    margin-right: 2px;
+  }
+  
+  .checkbox-label {
+    margin-top: 2px;
+  }
 
 .bottom-signup {
     width: 100%;
